--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 flask==0.10.1
 redis==2.10.3
-pandas==0.16.2
-numpy==1.7.0
+pandas>=0.16.2
+numpy>=1.7.0
 nose==1.3.7
 flask-restful==0.3.4
 coverage==4.0.1
