--- a/dashboard/conf/logging.conf
+++ b/dashboard/conf/logging.conf
@@ -2,18 +2,18 @@
 keys=root, access, error
 
 [handlers]
-keys=rootRotateFileHandler, accessRotateFileHandler, errorRotateFileHandler
+keys=consoleHandler, accessRotateFileHandler, errorRotateFileHandler
 
 [formatters]
 keys=simpleFormatter
 
 [formatter_simpleFormatter]
-format=%(asctime)s [%(process)d|%(name)s] [%(levelname)s] [%(pathname)s:%(lineno)d %(funcName)s] %(message)s
+format=%(asctime)s [%(process)d] [%(levelname)s] [%(filename)s:%(lineno)d %(funcName)s] %(message)s
 datefmt=%Y-%m-%d %H:%M:%S
 
 [logger_root]
 level=INFO
-handlers=rootRotateFileHandler
+handlers=consoleHandler
 qualname=root
 propagate=0
 
@@ -29,20 +29,20 @@ handlers=errorRotateFileHandler
 qualname=error
 propagate=0
 
-[handler_rootRotateFileHandler]
-class=handlers.RotatingFileHandler
-level=INFO
+[handler_consoleHandler]
+class=StreamHandler
+level=DEBUG
 formatter=simpleFormatter
-args=('/mnt/ipython-dashboard/logs/root.log', 'a', 10000000, 9)
+args=(sys.stdout,)
 
 [handler_accessRotateFileHandler]
 class=handlers.RotatingFileHandler
 level=INFO
 formatter=simpleFormatter
-args=('/mnt/ipython-dashboard/logs/access.log', 'a', 10000000, 9)
+args=('/mnt/ipython-dashboard/logs/access.log', 'a', 1024 * 1024, 9)
 
 [handler_errorRotateFileHandler]
 class=handlers.RotatingFileHandler
 level=ERROR
 formatter=simpleFormatter
-args=('/mnt/ipython-dashboard/logs/error.log', 'a', 10000000, 9)
+args=('/mnt/ipython-dashboard/logs/error.log', 'a', 1024 * 1024, 9)
