support x-axis as dateformat, but need do some more work

--- a/dashboard/conf/logging.conf
+++ b/dashboard/conf/logging.conf
@@ -2,7 +2,7 @@
 keys=root, access, error
 
 [handlers]
-keys=consoleHandler, accessRotateFileHandler, errorRotateFileHandler
+keys=consoleHandler, rootRotateFileHandler, accessRotateFileHandler, errorRotateFileHandler
 
 [formatters]
 keys=simpleFormatter
@@ -13,7 +13,7 @@ datefmt=%Y-%m-%d %H:%M:%S
 
 [logger_root]
 level=INFO
-handlers=consoleHandler
+handlers=consoleHandler, rootRotateFileHandler
 qualname=root
 propagate=0
 
@@ -35,14 +35,20 @@ level=DEBUG
 formatter=simpleFormatter
 args=(sys.stdout,)
 
+[handler_rootRotateFileHandler]
+class=handlers.RotatingFileHandler
+level=INFO
+formatter=simpleFormatter
+args=('/mnt/ipython-dashboard/logs/root.log', 'a', 10 * 1024 * 1024, 9)
+
 [handler_accessRotateFileHandler]
 class=handlers.RotatingFileHandler
 level=INFO
 formatter=simpleFormatter
-args=('/mnt/ipython-dashboard/logs/access.log', 'a', 1024 * 1024, 9)
+args=('/mnt/ipython-dashboard/logs/access.log', 'a', 10 * 1024 * 1024, 9)
 
 [handler_errorRotateFileHandler]
 class=handlers.RotatingFileHandler
 level=ERROR
 formatter=simpleFormatter
-args=('/mnt/ipython-dashboard/logs/error.log', 'a', 1024 * 1024, 9)
+args=('/mnt/ipython-dashboard/logs/error.log', 'a', 10 * 1024 * 1024, 9)
