--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,34 @@
 # travis-ci configuration
 language: python
+
 python:
   - "2.7"
   # - "3.3"
   # - "3.4"
+
 install:
   - pip install -e . --use-mirrors
   - pip install coveralls --use-mirrors
   - pip install flake8 coverage --use-mirrors
+
 services:
   - redis-server
+  - mysql
+
+before_script:
+# make logs template
+  - cd /mnt
+  - mkdir ipython-dashboard
+  - cd ipython-dashboard
+  - mkdir logs
+
+# mysql create user
+  - mysql -e 'create user 'ipd'@'localhost' identified by 'thanks';'
+  - mysql -e 'grant all privileges on *.* to ipd@localhost;'
+
 script:
   - nosetests --with-coverage --cover-package=dashboard
   - flake8 --exit-zero dashboard
+
 after_success:
   - coveralls
