--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,8 @@ before_script:
 script:
   - cd $TRAVIS_BUILD_DIR
   - ls -ltr .
-  - sudo nosetests --with-coverage --cover-package=dashboard
-  - sudo flake8 --exit-zero dashboard
+  - nosetests --with-coverage --cover-package=dashboard
+  - flake8 --exit-zero dashboard
 
 after_success:
   - coveralls
