--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ before_script:
   - echo "grant all privileges on *.* to ipd@localhost;" | mysql -u root
 
 script:
+  - sudo service mysql restart
   - cd $TRAVIS_BUILD_DIR
   - ls -ltr .
   - nosetests --with-coverage --cover-package=dashboard
