--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ python:
   # - "3.4"
 
 install:
-  - pip install -e . --use-mirrors
-  - pip install coveralls --use-mirrors
-  - pip install flake8 coverage --use-mirrors
+  - pip install -e .
+  - pip install coveralls
+  - pip install flake8 coverage
 
 services:
   - redis-server
